--- a/ownProject/ownProject.csproj
+++ b/ownProject/ownProject.csproj
@@ -294,7 +294,13 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Assets\damagescript.cs" />
+    <Compile Include="Assets\meteor.cs" />
+    <Compile Include="Assets\move2Script.cs" />
+    <Compile Include="Assets\moveBlast.cs" />
     <Compile Include="Assets\MoveScript.cs" />
+    <Compile Include="Assets\playerlife.cs" />
+    <Compile Include="Assets\skillsScript.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="GenerateTargetFrameworkMonikerAttribute" />
