--- a/ownProject/ownProject.csproj
+++ b/ownProject/ownProject.csproj
@@ -294,16 +294,16 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Assets\damagescript.cs" />
-    <Compile Include="Assets\move2Script.cs" />
-    <Compile Include="Assets\MoveScript.cs" />
-    <Compile Include="Assets\Pickup.cs" />
-    <Compile Include="Assets\playerlife.cs" />
+    <Compile Include="Assets\Scripts\damagescript.cs" />
+    <Compile Include="Assets\Scripts\Move2Script.cs" />
+    <Compile Include="Assets\Scripts\MoveScript.cs" />
+    <Compile Include="Assets\Scripts\Pickup.cs" />
+    <Compile Include="Assets\Scripts\PlayerLife.cs" />
+    <Compile Include="Assets\Scripts\Turn.cs" />
     <Compile Include="Assets\skills\meteor.cs" />
     <Compile Include="Assets\skills\MoveBall.cs" />
     <Compile Include="Assets\skills\moveBlast.cs" />
     <Compile Include="Assets\skills\skillsScript.cs" />
-    <Compile Include="Assets\SpawnPickup.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="GenerateTargetFrameworkMonikerAttribute" />
