--- a/ownProject/ownProject.csproj
+++ b/ownProject/ownProject.csproj
@@ -294,17 +294,17 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Assets\Scripts\DamageScript.cs" />
+    <Compile Include="Assets\Scripts\damagescript.cs" />
     <Compile Include="Assets\Scripts\MenuManager.cs" />
     <Compile Include="Assets\Scripts\Move2Script.cs" />
     <Compile Include="Assets\Scripts\MoveScript.cs" />
     <Compile Include="Assets\Scripts\Pickup.cs" />
     <Compile Include="Assets\Scripts\PlayerLife.cs" />
     <Compile Include="Assets\Scripts\Turn.cs" />
-    <Compile Include="Assets\skills\Meteor.cs" />
+    <Compile Include="Assets\skills\meteor.cs" />
     <Compile Include="Assets\skills\MoveBall.cs" />
-    <Compile Include="Assets\skills\MoveBlast.cs" />
-    <Compile Include="Assets\skills\SkillsScript.cs" />
+    <Compile Include="Assets\skills\moveBlast.cs" />
+    <Compile Include="Assets\skills\skillsScript.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="GenerateTargetFrameworkMonikerAttribute" />
